Archive2/9c/bd90dc3839b40e/output
main.cpp:40:39: error: expected '}'
inf >> ID >> Job_class >> Years >> Ed;
                                      ^
main.cpp:39:1: note: to match this '{'
{
^
1 error generated.
